--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,40 +1,96 @@
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="68.375px" height="24px" viewBox="0 0 68.375 24" enable-background="new 0 0 68.375 24" xml:space="preserve">
-<path d="M4.59,6.89c0.7-0.71,1.4-1.35,1.71-1.22c0.5,0.2,0,1.03-0.3,1.52c-0.25,0.42-2.86,3.89-2.86,6.31
-	c0,1.28,0.48,2.34,1.34,2.98c0.75,0.56,1.74,0.729,2.64,0.459c1.07-0.31,1.95-1.399,3.06-2.77c1.21-1.49,2.83-3.44,4.08-3.44
-	c1.631,0,1.65,1.01,1.76,1.79c-3.779,0.641-5.379,3.67-5.379,5.371c0,1.699,1.44,3.09,3.209,3.09c1.631,0,4.291-1.33,4.69-6.101H21
-	v-2.5h-2.471c-0.149-1.65-1.09-4.2-4.029-4.2c-2.25,0-4.18,1.91-4.94,2.84c-0.58,0.73-2.06,2.48-2.29,2.72
-	c-0.25,0.3-0.68,0.84-1.11,0.84c-0.45,0-0.72-0.83-0.36-1.92c0.35-1.09,1.4-2.86,1.85-3.52C8.43,8,8.95,7.22,8.95,5.86
-	C8.95,3.69,7.31,3,6.44,3C5.12,3,3.97,4,3.72,4.25C3.36,4.61,3.06,4.91,2.84,5.18L4.59,6.89z M13.88,18.55
-	c-0.31,0-0.739-0.26-0.739-0.72c0-0.6,0.729-2.2,2.869-2.76C15.71,17.76,14.58,18.55,13.88,18.55z"/>
-<path fill="none" d="M0,0h24v24H0V0z"/>
-<g>
-	<path d="M30.864,8.79c1.336,0,2.373,0.456,3.112,1.368c0.739,0.913,1.109,2.204,1.109,3.873c0,1.67-0.373,2.968-1.118,3.893
-		c-0.746,0.924-1.78,1.387-3.104,1.387c-0.662,0-1.267-0.122-1.813-0.366c-0.548-0.245-1.007-0.62-1.378-1.128h-0.111l-0.325,1.309
-		h-1.104V4.689h1.54v3.507c0,0.786-0.024,1.491-0.074,2.115h0.074C28.391,9.297,29.454,8.79,30.864,8.79z M30.642,10.08
-		c-1.052,0-1.81,0.301-2.272,0.905c-0.465,0.603-0.696,1.619-0.696,3.047c0,1.43,0.238,2.451,0.714,3.066
-		c0.477,0.615,1.24,0.924,2.292,0.924c0.946,0,1.651-0.346,2.115-1.035s0.696-1.68,0.696-2.973c0-1.324-0.232-2.311-0.696-2.96
-		S31.612,10.08,30.642,10.08z"/>
-	<path d="M44.028,19.125l-0.306-1.447h-0.074c-0.508,0.637-1.014,1.068-1.518,1.294s-1.133,0.339-1.888,0.339
-		c-1.008,0-1.799-0.26-2.37-0.779c-0.572-0.52-0.858-1.258-0.858-2.217c0-2.054,1.642-3.13,4.927-3.229l1.725-0.057v-0.63
-		c0-0.798-0.171-1.387-0.515-1.767c-0.343-0.381-0.892-0.571-1.646-0.571c-0.848,0-1.806,0.26-2.876,0.779l-0.473-1.178
-		c0.5-0.272,1.049-0.485,1.646-0.64c0.597-0.154,1.195-0.232,1.795-0.232c1.212,0,2.11,0.269,2.695,0.807
-		c0.584,0.538,0.877,1.401,0.877,2.588v6.939H44.028z M40.549,18.039c0.959,0,1.712-0.262,2.26-0.788
-		c0.547-0.525,0.82-1.262,0.82-2.208v-0.918l-1.539,0.064c-1.225,0.043-2.108,0.233-2.649,0.57
-		c-0.541,0.338-0.812,0.861-0.812,1.572c0,0.557,0.168,0.98,0.506,1.271C39.472,17.895,39.943,18.039,40.549,18.039z"/>
-	<path d="M54.901,16.352c0,0.945-0.352,1.676-1.057,2.189s-1.695,0.77-2.969,0.77c-1.349,0-2.4-0.213-3.154-0.641v-1.428
-		c0.488,0.247,1.012,0.441,1.572,0.584c0.56,0.143,1.1,0.213,1.619,0.213c0.804,0,1.422-0.128,1.855-0.385
-		c0.433-0.256,0.648-0.647,0.648-1.174c0-0.395-0.171-0.734-0.515-1.016c-0.343-0.281-1.013-0.613-2.009-0.997
-		c-0.945-0.353-1.618-0.66-2.018-0.923c-0.398-0.264-0.695-0.562-0.891-0.896c-0.194-0.334-0.292-0.733-0.292-1.197
-		c0-0.829,0.337-1.483,1.011-1.962c0.675-0.479,1.6-0.719,2.774-0.719c1.095,0,2.165,0.223,3.21,0.668l-0.547,1.252
-		c-1.021-0.42-1.945-0.631-2.774-0.631c-0.729,0-1.28,0.115-1.651,0.343c-0.371,0.229-0.557,0.544-0.557,0.946
-		c0,0.272,0.069,0.504,0.209,0.696c0.139,0.192,0.363,0.375,0.672,0.547c0.31,0.174,0.903,0.424,1.781,0.752
-		c1.207,0.439,2.021,0.881,2.445,1.326C54.689,15.117,54.901,15.678,54.901,16.352z"/>
-	<path d="M61.701,19.311c-1.502,0-2.688-0.457-3.558-1.373c-0.869-0.915-1.304-2.186-1.304-3.812c0-1.639,0.404-2.941,1.211-3.906
-		c0.808-0.965,1.892-1.447,3.252-1.447c1.274,0,2.282,0.419,3.024,1.257c0.742,0.838,1.113,1.944,1.113,3.317v0.974h-7.005
-		c0.031,1.194,0.333,2.101,0.905,2.718c0.571,0.619,1.378,0.928,2.417,0.928c1.094,0,2.177-0.229,3.246-0.686v1.373
-		c-0.544,0.234-1.059,0.403-1.544,0.505C62.974,19.26,62.389,19.311,61.701,19.311z M61.284,10.061
-		c-0.816,0-1.468,0.266-1.953,0.798c-0.485,0.532-0.771,1.268-0.858,2.208h5.316c0-0.97-0.217-1.714-0.649-2.23
-		C62.707,10.319,62.088,10.061,61.284,10.061z"/>
-</g>
-</svg>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- Generator: Adobe Illustrator 18.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+
+<svg
+   xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   version="1.1"
+   id="Calque_1"
+   x="0px"
+   y="0px"
+   viewBox="0 0 1100.2603 578.46808"
+   enable-background="new 0 0 1940 640"
+   xml:space="preserve"
+   inkscape:version="0.91 r13725"
+   sodipodi:docname="betterdocs_white.svg"
+   width="200"
+   height="578.46808"><metadata
+     id="metadata35"><rdf:RDF><cc:Work
+         rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
+           rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs
+     id="defs33" /><sodipodi:namedview
+     pagecolor="#ffffff"
+     bordercolor="#666666"
+     borderopacity="1"
+     objecttolerance="10"
+     gridtolerance="10"
+     guidetolerance="10"
+     inkscape:pageopacity="0"
+     inkscape:pageshadow="2"
+     inkscape:window-width="1360"
+     inkscape:window-height="705"
+     id="namedview31"
+     showgrid="false"
+     inkscape:zoom="0.64"
+     inkscape:cx="705.80787"
+     inkscape:cy="235.31044"
+     inkscape:window-x="-8"
+     inkscape:window-y="-8"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="g3"
+     fit-margin-top="0"
+     fit-margin-left="0"
+     fit-margin-right="0"
+     fit-margin-bottom="0" /><g
+     id="g3"
+     transform="translate(-28.6,-43.2)"><path
+       d="m 156.1,273.9 -127.1,0 0,142.7 84.6,76.2 0,-138.6 45.2,0 c 28.7,0 42.9,13.8 42.9,36 l 0,106 c 0,22.2 -13.4,37.1 -42.9,37.1 l -130.2,0 0,80.7 127,0 c 68.1,0.4 132,-33.7 132,-111.7 l 0,-114 C 288.1,308.7 224.2,273.9 156.1,273.9 l 0,0 z"
+       id="path5"
+       inkscape:connector-curvature="0"
+       style="fill:#ffffff;fill-opacity:1" /><path
+       d="m 701.9,502.3 0,-117.1 c 0,-42.1 75.8,-51.7 98.7,-9.6 l 70,-28.3 C 843,286.8 792.9,269.2 751.2,269.2 c -68.1,0 -135.5,39.4 -135.5,115.9 l 0,117.1 c 0,77.3 67.3,115.9 133.9,115.9 42.9,0 94.1,-21 122.5,-76.2 l -75,-34.4 c -18.3,47.3 -95.2,35.8 -95.2,-5.2 l 0,0 z"
+       id="path7"
+       inkscape:connector-curvature="0"
+       style="fill:#ffffff;fill-opacity:1" /><path
+       d="m 1011.4069,404.66806 c -26.39995,-5.7 -43.99995,-15.3 -45.19995,-31.8 1.5,-39.4 62.39995,-40.9 97.99995,-3.1 l 56.3,-43.2 c -35.2,-42.9 -75,-54.3 -115.9,-54.3 -62.39995,0 -122.79995,35.2 -122.79995,101.8 0,64.7 49.7,99.5 104.5,107.9 27.89995,3.8 58.89995,14.9 58.19995,34.1 -2.3,36.4 -77.29995,34.4 -111.39995,-6.9 l -54.3,50.9 c 31.8,40.9 75,61.6 115.6,61.6 62.39995,0 131.59995,-36 134.29995,-101.8 3.6,-83 -56.8,-104.1 -117.3,-115.2 l 0,0 z"
+       id="path9"
+       inkscape:connector-curvature="0"
+       style="fill:#ffffff;fill-opacity:1" /></g><g
+     id="g19"
+     transform="translate(-28.6,-43.2)"><path
+       d="m 103.3,43.3 -74.7,0 0,77.1 47.7,43 0,-81.7 27.8,0 c 29.6,0 29.6,37.2 0,37.2 l -18.3,0 0,35.6 18.3,0 c 29.6,0 29.6,37.2 0,37.2 l -75.5,0 0,38.3 74.6,0 c 38.5,0 68.3,-15.4 69.4,-53.6 0,-17.6 -4.8,-30.7 -13.3,-39.8 8.5,-9.1 13.3,-22.2 13.3,-39.8 -1,-38.1 -30.8,-53.5 -69.3,-53.5 z"
+       id="path21"
+       inkscape:connector-curvature="0"
+       style="fill:#ffffff" /><polygon
+       points="529.8,81.7 529.8,230 577.6,230 577.6,81.7 625.7,81.7 625.7,43.3 358.7,43.3 358.7,81.7 406.8,81.7 406.8,230 454.5,230 454.5,81.7 "
+       id="polygon23"
+       style="fill:#ffffff" /><polygon
+       points="296.5,160.5 296.5,112.8 245.4,112.8 245.4,81.7 341.7,81.7 341.7,43.3 197.6,43.3 197.6,230 341.7,230 341.7,191.7 245.4,191.7 245.4,160.5 "
+       id="polygon25"
+       style="fill:#ffffff" /><polygon
+       points="741.3,160.5 741.3,112.8 690.1,112.8 690.1,81.7 786.4,81.7 786.4,43.3 642.4,43.3 642.4,230 786.4,230 786.4,191.7 690.1,191.7 690.1,160.5 "
+       id="polygon27"
+       style="fill:#ffffff" /><path
+       d="m 918.6,166 c 22.5,-7.1 36.5,-26.6 36.5,-61.1 -1,-43.6 -30.8,-61.7 -69.2,-61.7 l -74.5,0 0,186.8 47.6,0 0,-59.2 8.4,0 43.2,59.2 58.7,0 -50.7,-64 z m -31.9,-35.8 -27.7,0 0,-48.5 27.7,0 c 29.6,0 29.6,48.5 0,48.5 z"
+       id="path29"
+       inkscape:connector-curvature="0"
+       style="fill:#ffffff" /><flowRoot
+       xml:space="preserve"
+       id="flowRoot4213"
+       style="font-style:normal;font-weight:normal;font-size:40px;line-height:125%;font-family:sans-serif;letter-spacing:0px;word-spacing:0px;fill:#000000;fill-opacity:1;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"><flowRegion
+         id="flowRegion4215"><rect
+           id="rect4217"
+           width="294.01859"
+           height="291.52692"
+           x="1465.1096"
+           y="154.12183" /></flowRegion><flowPara
+         id="flowPara4219" /></flowRoot></g><path
+     inkscape:connector-curvature="0"
+     style="fill:#ffffff;fill-opacity:1"
+     d="m 422.31942,226.64861 c -70.4,0 -140.39998,38.3 -140.39998,116.7 l 0,116 c 0,77.7 70.39998,116.7 141.19998,116.7 70.4,0 140.4,-39 140.4,-116.7 l 0,-116 c 0,-78.1 -70.8,-116.7 -141.2,-116.7 z m 55.1,232.7 c 0,24.5 -27.6,37.1 -54.7,37.1 -27.6,0 -55.1,-11.9 -55.1,-37.1 l 0,-116 c 0,-24.9 26.8,-38.3 53.6,-38.3 27.9,0 56.3,11.9 56.3,38.3 l 0,116 z"
+     id="path15-5" /></svg>
