--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 				</section>
 				<section class="hero_search">
 					<h1>Tutorials</h1>
-					<p>Everything you need to know about running our software.</p>
+					<p>Everything you need to know about running BetterDiscord.</p>
 					{% include search.html %}
 				</section>
 			</div>
