--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -10,7 +10,7 @@
 
 header {
 	padding: 16px 0 10px 0;
-	background: $header-color;
+	background: linear-gradient(135deg, $header-color 0%, $header-color2 100%);
 	color: #fff;
 
 	form {
@@ -35,9 +35,9 @@ header {
 
 			svg {
 				fill: #fff;
-				width: 100%;
 				height: 46px;
 				min-width: 100px;
+				display: -webkit-box;
 			}
 		}
 
