--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,7 +8,8 @@ $desktop: "(min-width: 900px)";
 $dark-grey: #222;
 $medium-grey: #666;
 $light-grey: #ccc;
-$header-color: #0c92f1;
+$header-color: #339b78;
+$header-color2: #1868df;
 
 $link-color: #4A4A4A;
 $link-hover-color: #111;
