--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -91,6 +91,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<li class="footer-nav">
 						<h4>Help</h4>
 						<ul>
+							<li><a href="https://support.betterdocs.us">Support</a></li>
 							<li><a href="/contact/">Contact</a></li>
 							<li><a href="/about/">About</a></li>
 						</ul>
