--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,10 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-NG6W33N');</script>
 	<!-- End Google Tag Manager -->
+	<!-- Popular Ad -->
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
 	{% endif %}
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -90,7 +94,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 		</section>
 	</header>
+	<ins class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-1998206533560539"
+			data-ad-slot="6545618600"
+			data-ad-format="auto"
+			data-full-width-responsive="true">
+		</ins>
 	{{ content }}
+	<ins class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-1998206533560539"
+			data-ad-slot="6545618600"
+			data-ad-format="auto"
+			data-full-width-responsive="true">
+		</ins>
 	<footer>
 		<div class="container">
 			<ul class="footer-columns">
