--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -33,6 +33,13 @@
 			<script>
 			(adsbygoogle = window.adsbygoogle || []).push({});
 			</script>
+			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<script>
+				 (adsbygoogle = window.adsbygoogle || []).push({
+					  google_ad_client: "ca-pub-1998206533560539",
+					  enable_page_level_ads: true
+				 });
+			</script>
 		{% endif %}
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
