--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,21 +101,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			</div>
 		</section>
 	</header>
+	<!-- First Ad -->
 	<ins class="adsbygoogle"
-			style="display:block"
-			data-ad-client="ca-pub-1998206533560539"
-			data-ad-slot="6545618600"
-			data-ad-format="auto"
-			data-full-width-responsive="true">
-		</ins>
+		style="display:block"
+		data-ad-client="ca-pub-1998206533560539"
+		data-ad-slot="6545618600"
+		data-ad-format="auto"
+		data-full-width-responsive="true">
+	</ins>
 	{{ content }}
+	<!-- Second Ad -->
 	<ins class="adsbygoogle"
-			style="display:block"
-			data-ad-client="ca-pub-1998206533560539"
-			data-ad-slot="6545618600"
-			data-ad-format="auto"
-			data-full-width-responsive="true">
-		</ins>
+		style="display:block"
+		data-ad-client="ca-pub-1998206533560539"
+		data-ad-slot="1731267039"
+		data-ad-format="auto"
+		data-full-width-responsive="true">
+	</ins>
 	<footer>
 		<div class="container">
 			<ul class="footer-columns">
