--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -50,6 +50,9 @@ layout: default
 				</div>
 			</div>
 		</div>
+		{% if page.ghcommentid %}
+		{% include comments.html %}
+		{% endif %}
 	</section>
 </div>
 
