--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -138,6 +138,74 @@ input#search-input::placeholder {
     color: #fff;
     text-indent: 10px;
 }
+div#gh-comments {
+    margin: auto 40px;
+    background-color: #fff;
+    margin-top: 15px;
+    border-radius: 2px;
+    padding: 5px 20px 15px 20px;
+    display: flex;
+    flex-direction: column;
+
+    h4 {
+        margin: 15px 0px;
+        color: #676767;
+    }
+
+    div#gh-comments-list {
+        display: flex;
+        flex-direction: column;
+        
+        .button.small {
+            display: -webkit-inline-box;
+            align-self: flex-end;
+            top: -45px;
+            margin-bottom: -25px;
+            position: relative;
+
+            a {
+                font-size: 16px;
+                display: -webkit-box;
+                padding: 11px 20px;
+            }
+        }
+        
+        div#gh-comment {
+            background-color: #eee;
+            box-shadow: 0px 0px 0px 0px #000;
+            padding: 13px 15px 0px 15px;
+            border-radius: 2px;
+
+            p {
+                text-indent: 39px;
+            }
+        
+            img {
+                border: 2px solid #b1b1b1;
+                border-radius: 2px;
+                position: relative;
+                top: 12px;
+                right: 7px;
+            }
+        
+            .user { 
+                display: unset;
+
+                    a {
+                    font-size: 18px;
+                }
+            }
+            .date {
+                display: unset;
+
+                em {
+                    font-size: 11px;
+                    color: #9e9e9e;
+                }
+            }
+        }
+    }
+}
 @keyframes context-open-new {
 0% {
     transform: scale(1, 0.8); } 
