--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -11,7 +11,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+		{% if site.snipcart_key %}
 		<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet">
+		{% endif %}
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<!--Google Analytics Key-->
