--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -187,6 +187,16 @@ div#gh-comments {
                 top: 12px;
                 right: 7px;
             }
+
+            .badge {
+                display: unset;
+                background-color: #339b78;
+                color: #fff;
+                padding: 4px 8px;
+                border-radius: 2px;
+                font-size: 12px;
+                text-transform: lowercase;
+            }
         
             .user { 
                 display: unset;
@@ -197,10 +207,81 @@ div#gh-comments {
             }
             .date {
                 display: unset;
+                margin-left: 5px;
 
                 em {
                     font-size: 11px;
                     color: #9e9e9e;
+                }
+            }
+            .comment-reactions-options {
+                display: flex;
+
+                div.reaction {
+                    display: -webkit-box;
+                    background-color: rgba($brand-color, .17);
+                    border: 1px solid transparent;
+                    border-radius: 2px;
+                    margin-left: 6px;
+                    padding: 3px 5px;
+                    margin-bottom: 10px;
+                    margin-top: -5px;
+                    color: #339b78;
+                    line-height: 26px;
+                    padding-left: 10px;
+                    transition: border-color .2s linear;
+                    cursor: pointer;
+
+                    &:hover {
+                        border-color: $brand-color;
+                    }
+                }
+
+                div[count="0"] {
+                    display: none;
+                }
+
+                div::before {
+                    content: "";
+                    background-repeat: no-repeat;
+                    width: 20px;
+                    display: -webkit-box;
+                    background-size: 20px;
+                    background-position: center;
+                    height: 20px;
+                    position: relative;
+                    right: 5px;
+                    top: 3px;
+                }
+
+                div[value="Dislike"]::before {
+                    content: "";
+                    background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f44e.png);
+                }
+
+                div[value="Like"]::before {
+                    content: "";
+                    background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f44d.png);
+                }
+
+                div[value="Laugh"]::before {
+                    content: "";
+                    background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f604.png);
+                }
+
+                div[value="Hooray"]::before {
+                    content: "";
+                    background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f389.png);
+                }
+
+                div[value="Confused"]::before {
+                    content: "";
+                    background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f615.png);
+                }
+
+                div[value="Heart"]::before {
+                    content: "";
+                    background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png);
                 }
             }
         }
