--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -173,18 +173,20 @@ div#gh-comments {
         div#gh-comment {
             background-color: #eee;
             box-shadow: 0px 0px 0px 0px #000;
-            padding: 13px 15px 0px 15px;
+            padding: 0px 15px 5px 23px;
             border-radius: 2px;
+            margin-bottom: 10px;
 
             p {
                 text-indent: 39px;
+                margin: 5px 0px 15px 0px;
             }
         
             img {
                 border: 2px solid #b1b1b1;
                 border-radius: 2px;
                 position: relative;
-                top: 12px;
+                top: 23px;
                 right: 7px;
             }
 
