--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,9 @@
 	<!-- End Google Tag Manager -->
 	<!-- Popular Ad -->
 	<script>
-	(adsbygoogle = window.adsbygoogle || []).push({});
+	[].forEach.call(document.querySelectorAll('.adsbygoogle'), function(){
+    (adsbygoogle = window.adsbygoogle || []).push({});
+	});
 	</script>
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script>
