--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -33,7 +33,9 @@
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<!-- Popular Ad -->
 			<script>
+			[].forEach.call(document.querySelectorAll('.adsbygoogle'), function(){
 			(adsbygoogle = window.adsbygoogle || []).push({});
+			});
 			</script>
 			<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			<script>
