--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -41,12 +41,12 @@
 			(adsbygoogle = window.adsbygoogle || []).push({});
 		});
 	</script>
-	<!--<script>
+	<script>
 		(adsbygoogle = window.adsbygoogle || []).push({
 			google_ad_client: "ca-pub-1998206533560539",
 			enable_page_level_ads: true
 		});
-	</script>-->
+	</script>
 	{% endif %}
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
