--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -36,17 +36,12 @@
 	<!-- End Google Tag Manager -->
 	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<!-- Popular Ad -->
-	<script>
-		[].forEach.call(document.querySelectorAll('.adsbygoogle'), function () {
-			(adsbygoogle = window.adsbygoogle || []).push({});
-		});
-	</script>
-	<script>
+	<!--<script>
 		(adsbygoogle = window.adsbygoogle || []).push({
 			google_ad_client: "ca-pub-1998206533560539",
 			enable_page_level_ads: true
 		});
-	</script>
+	</script>-->
 	{% endif %}
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -157,6 +152,9 @@
 			document.body.classList.toggle("nav-open");
 			return false;
 		};
+		[].forEach.call(document.querySelectorAll('.adsbygoogle'), function () {
+			(adsbygoogle = window.adsbygoogle || []).push({});
+		});
 	</script>
 	<script src="/js/application.js" type="text/javascript"></script>
 </body>
