--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -50,6 +50,22 @@ layout: default
 				</div>
 			</div>
 		</div>
+		<div class="flex-row">
+			<ins class="adsbygoogle"
+				style="display:block; text-align:center;"
+				data-ad-layout="in-article"
+				data-ad-format="fluid"
+				data-ad-client="ca-pub-1998206533560539"
+				data-ad-slot="1185763123">
+			</ins>
+			<ins class="adsbygoogle"
+				style="display:block; text-align:center;"
+				data-ad-layout="in-article"
+				data-ad-format="fluid"
+				data-ad-client="ca-pub-1998206533560539"
+				data-ad-slot="1185763123">
+			</ins>
+		</div>
 		{% if page.ghcommentid %}
 		{% include comments.html %}
 		{% endif %}
