--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -50,13 +50,14 @@ layout: default
 				</div>
 			</div>
 		</div>
-			<ins class="adsbygoogle"
-				style="display:block; text-align:center;"
-				data-ad-layout="in-article"
-				data-ad-format="fluid"
-				data-ad-client="ca-pub-1998206533560539"
-				data-ad-slot="1185763123">
-			</ins>
+		<!-- Third Ad Responsive -->
+		<ins class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-1998206533560539"
+			data-ad-slot="9689023387"
+			data-ad-format="auto"
+			data-full-width-responsive="true">
+		</ins>
 		{% if page.ghcommentid %}
 		{% include comments.html %}
 		{% endif %}
