--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -7,8 +7,13 @@
 	}
 
 		.style-picker {
-			padding: unset;/*10px 0px 10px 7px*/
+			padding: unset;
 			flex: 1;
+			overflow-x: auto;
+			overflow-y: hidden;
+			height: 50px;
+			margin: 0px 8px 3px 8px;
+			max-width: calc(100% - 100px);
 		}
 	}
 }
@@ -20,7 +25,7 @@
 	box-sizing: border-box;
 	border-radius: 3px;
 	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-	transition: .1s linear transform, .1s linear box-shadow;;
+	transition: .1s linear transform, .1s linear box-shadow;
 
 &:hover {
 		transform: translate(0px,-5px);
@@ -57,7 +62,6 @@
 			border-radius: 2px;
 				img {
 					border-radius: 2px;
-					width: 100%;
 					height: 100%;
 				}
 
@@ -162,15 +166,15 @@
 }
 
 .product-container {
-	display: flex;
+	display: block;
 	flex-wrap: wrap;
-	margin-left: -40px;
+	margin-left: unset;
 
 	.styles {
 		width: auto;
 		flex: 1 1 300px;
 		margin-left: 40px;
-		display: initial;
+		display: block;
 		.flex-row {
 			display: flex;
 		}
@@ -179,13 +183,16 @@
 	.button {
 		.btn {
 			display: -webkit-inline-box;
+			font-size: 13px;
+			padding: 10px 20px;
+			margin: 6px 0px 0px 0px;
 		}
 	}
 
 	.product-details {
 		flex: 2 1 500px;
 		text-align: left;
-		margin-left: 40px;
+		margin-left: unset;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
         background-color: #fff;
 		border-radius: 2px;
@@ -227,7 +234,9 @@
 				}
 				
                 .btn {
-                    display: -webkit-inline-box;
+					display: -webkit-inline-box;
+					font-size: 13px;
+    				padding: 10px 20px;
                 }
             }
         }
@@ -309,7 +318,8 @@
 }
 
 #product .styles {
-	padding: 20px;
+	padding: unset;
+    margin-left: unset;
 }
 
 #themes, #plugins {
