--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -289,6 +289,41 @@ div#gh-comments {
         }
     }
 }
+
+nav {
+    .dropdown {
+        display: initial;
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #fff;
+            border-radius: 2px;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+            a {
+                float: none;
+                color: black;
+                padding: 12px 16px;
+                text-decoration: none;
+                display: block;
+                text-align: left;
+                &:hover {
+                    background-color: #ddd;
+                }
+            }
+            &:hover {
+                display: block;
+            }
+        }
+        &:hover {
+            .dropdown-content {
+                display: block;
+            }
+        }
+    }
+}
+
 @keyframes context-open-new {
 0% {
     transform: scale(1, 0.8); } 
