Navigation Bar update

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -227,9 +227,9 @@ header > .container.navbar-scroll {
 		a {
 			transition: .2s linear background-color;
 			&.active {
-				background-color: rgba(0, 0, 0, 0.05);
+				background-color: rgba(0, 0, 0, 0.07);
 			}
-			&:hover, &:active {
+			&:hover, &:active, &:focus {
 				background-color: rgba(0, 0, 0, 0.05);
 			}
 		}
