--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -24,12 +24,12 @@
 	position: relative;
 	box-sizing: border-box;
 	border-radius: 3px;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-	transition: .1s linear transform, .1s linear box-shadow;
+	box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+	transition: .1s linear transform, box-shadow 280ms cubic-bezier(.4,0,.2,1);
 
 &:hover {
 		transform: translate(0px,-5px);
-		box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.4);
+		box-shadow: 0 10px 16px rgba(0,0,0,.2);
 }
 
 	.style-picker {
