--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -42,9 +42,6 @@
     flex-basis: 21%;
     padding: unset;
 }
-.content.no-padding section {
-    padding: unset;
-}
 .card-container.flex-row {
     display: block
 }
@@ -56,27 +53,79 @@
         border-radius: 2px;
         box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
         display: flex;
-        flex-direction: column;
         transition: .1s linear box-shadow;
+        margin: 15px 30px;
+        @media #{$mid-point} {
+            margin-right: unset;
+            margin-left: 33px;
+        }
         &:hover {
             box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 1px rgba(0,0,0,0.08)
         }
-        .card-header {
-            color: $brand-color;
-            text-align: center;
-            padding: 15px 0px 20px 0px;
-            .material-icons {
-                font-size: 2.5em;
-                border: 2px solid;
-                border-radius: 50%;
-                padding: 16px;
+        &:first-child {
+            @media #{$mid-point} {
+                margin-left: 80px;
             }
         }
-        .card-content {
-            padding: 10px;
-            text-align: center;
-            p {
-                font-size: 16px;
+        &:last-child {
+            @media #{$mid-point} {
+                margin-right: 80px;
+            }
+        }
+        .card-inner {
+            display: flex;
+            flex-direction: column;
+            .card-header {
+                color: $brand-color;
+                text-align: center;
+                padding: 30px 0px 20px 0px;
+                border-top: 2px solid $brand-color;
+                .material-icons {
+                    font-size: 2.5em;
+                    border: 2px solid;
+                    border-radius: 50%;
+                    padding: 16px;
+                }
+            }
+            .card-content {
+                padding: 10px 30px;
+                text-align: center;
+                h3 {
+                    font-size: 1.5rem;
+                    text-align: left;
+                    margin-top: unset;
+                    font-weight: 500;
+                    font-family: Roboto;
+                    color: #565656;
+                }
+                p {
+                    font-size: 16px;
+                }
+            }
+            .card-footer {
+                display: block;
+                padding: 15px;
+                position: relative;
+                margin-top: auto;
+                .card-btn {
+                    color: rgba(0, 0, 0, 0.54);
+                    padding: 8px 16px;
+                    border-radius: 2px;
+                    transition: .2s linear background-color;
+                    font-weight: bold;
+                    &:hover {
+                        background-color: rgba(0, 0, 0, 0.08);
+                        text-decoration: unset;
+                    }
+                }
+                &::before {
+                    content: "";
+                    width: calc(100% - 30px);
+                    height: 1px;
+                    background-color: rgba(0, 0, 0, 0.05);
+                    position: absolute;
+                    top: -4px;
+                }
             }
         }
     }
