--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,12 +10,12 @@ layout: compress
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	{% seo %}
-	<meta content="/siteicon.png" property="og:image">
+	<meta content="/images/siteicon.png" property="og:image">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
-	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
+	<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
 	{% if site.snipcart_key %}
 	<link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet">
 	{% endif %}
@@ -85,7 +85,7 @@ layout: compress
 				{% endif %}
 			</div>
 			<div class="hero-image">
-				<img class="direct-image" src="discord-comparison.png">
+				<img class="direct-image" src="/images/discord-comparison.png">
 			</div>
 		</section>
 	</header>
