--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -373,6 +373,10 @@ nav {
     }
 }
 
+svg[viewBox="0 0 182 47"] {
+    display: none;
+}
+
 @keyframes context-open-new {
 0% {
     transform: scale(1, 0.8); } 
