--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -60,7 +60,7 @@ layout: compress
 	<!-- End Google Tag Manager (noscript) -->
 	<header>
 		<div class="container">
-			<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %} <span>{{ site.title }}</span></a></div>
+			<div class="company-name"><a href="{{ site.baseurl }}/">{% include logo.html %}</a></div>
 			{% include navigation.html %}
 		</div>
 
@@ -102,7 +102,7 @@ layout: compress
 		<div class="container">
 			<ul class="footer-columns">
 				<li class="about">
-					<div class="company-name">{% include logo.html %} <span>{{ site.title }}</span></div>
+					<div class="company-name">{% include svg_logo.html %} <span>{{ site.title }}</span></div>
 					<p class="editable">A Discord enhancement project. Free quality Themes and Plugins for Discord and easy
 						installation instructions for BetterDiscord and more!</p>
 				</li>
