--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -82,17 +82,17 @@
 }
 
 .company-name {
-	display: inline-block;
+	display: initial;
 	position: relative;
 	top: 4px;
 	a {
-		display: block;
+		display: initial;
 	}
 
 	svg {
 		display: inline-block;
-		height: 25px;
-		width: 25px;
+		height: 50px;
+    	width: 90px;
 	}
 
 	span {
