--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -182,6 +182,7 @@ layout: compress
 		});
 	</script>
 	<script src="/js/application.js" type="text/javascript"></script>
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </body>
 
 </html>
