--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -67,3 +67,4 @@ layout: default
 <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" data-api-key="{{ site.api_key }}" id="snipcart"></script>
 <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" rel="stylesheet" type="text/css" />
 {% endif %}
+<script src="js/comments.js"></script>
