--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,10 @@
 <script src="/js/comments.js"></script>
+<script src="/js/comments_x.js"
+repo="MrRobotjs/BetterDocs"
+issue-term="title"
+theme="github-light"
+crossorigin="anonymous"
+async></script>
 <div id="gh-comments">
     <h4>COMMENTS</h4>
     <div id="gh-comments-list"></div>
