--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,10 +1,9 @@
 <script src="/js/comments.js"></script>
 <script src="/js/comments_x.js"
 repo="MrRobotjs/BetterDocs"
-issue-term="title"
+issue-term="{{ page.title }}"
 theme="github-light"
 crossorigin="anonymous"
-issue-number='{{ page.ghcommentid }}'
 async></script>
 <div id="gh-comments">
     <h4>COMMENTS</h4>
