--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 <script src="/js/comments.js"></script>
-<script src="/js/comments_x.js"
+<script src="/js/comments_xi.js"
 repo="MrRobotjs/BetterDocs"
 issue-term="{{ page.title }}"
 theme="github-light"
