--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,10 +13,15 @@
 		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}" {% if link.new_window %}target="_blank"{% endif %}>{{ link.name }}</a>
 		{% elsif link.dropdown %}
 		<div class="dropdown">
-		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}" {% if link.new_window %}target="_blank"{% endif %}>{{ link.name }}</a>
+		<a href="{% include relative-src.html src=link.link %}" class="{{ class }}" {% if link.new_window %}target="_blank"{% endif %}>{{ link.name }}<img src="/images/down_arrow.svg" class="iconArrow" alt="Open Nav"></a>
 		<div class="dropdown-content">
 			{% for drop_links in link.dropdown_links %}
+			{% if drop_links.icon %}
+			<img src="{{ drop_links.icon }}" class="drop_icon">
+			<a href="{{ drop_links.link }}" class="has_icon">{{ drop_links.name }}</a>
+			{% else %}
 			<a href="{{ drop_links.link }}">{{ drop_links.name }}</a>
+			{% endif %}
 			{% endfor %}
 		</div>
 		</div>
