--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -277,7 +277,7 @@ div#gh-comments {
                     padding: 3px 5px;
                     margin-bottom: 10px;
                     margin-top: -5px;
-                    color: #339b78;
+                    color: $brand-color;
                     line-height: 26px;
                     padding-left: 10px;
                     transition: border-color .2s linear;
@@ -392,6 +392,50 @@ nav {
                 display: block;
             }
         }
+    }
+}
+.product-rating {
+    display: flex;
+    .reaction {
+        display: -webkit-inline-box;
+        background-color: rgba($brand-color, .17);
+        border: 1px solid transparent;
+        border-radius: 2px;
+        margin-left: 6px;
+        padding: 3px 10px;
+        margin-top: 10px;
+        color: $brand-color;
+        line-height: 26px;
+        padding-left: 10px;
+        transition: border-color .2s linear;
+        cursor: pointer;
+
+        &:hover {
+            border-color: $brand-color;
+        }
+    }
+    div[value="Dislike"]::before,
+    div[value="Like"]::before {
+        content: "";
+        background-repeat: no-repeat;
+        width: 20px;
+        display: -webkit-box;
+        background-size: 20px;
+        background-position: center;
+        height: 20px;
+        position: relative;
+        right: 5px;
+        top: 3px;
+    }
+
+    div[value="Dislike"]::before {
+        content: "";
+        background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f44e.png);
+    }
+
+    div[value="Like"]::before {
+        content: "";
+        background-image: url(https://assets-cdn.github.com/images/icons/emoji/unicode/1f44d.png);
     }
 }
 
