--- a/_sass/products.scss
+++ b/_sass/products.scss
@@ -128,6 +128,10 @@
         ~ .product-details {
 			display: flex;
 			flex-direction: column;
+			.product-description {
+				font-size: 0.9em;
+				line-height: 22px;
+			}
 		}
 		a {
 			&::before {
@@ -395,7 +399,9 @@
 					}
 				}
 				.product-description {
-					padding: 5px 15px 0px 15px;
+					padding: 14px 15px 0px 15px;
+					font-size: 0.9em;
+					line-height: 22px;
 				}
 			}
 		}
