Update Comment System

--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -395,7 +395,7 @@ nav {
     }
 }
 .product-rating {
-    display: flex;
+    display: -webkit-box;
     .reaction {
         display: -webkit-inline-box;
         background-color: rgba($brand-color, .17);
