--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,8 @@
 $brand-color: #339b78;
 $brand-color-2: #1868df;
 $default-hero-image: "/images/hero/box-top.jpg";
+$cubic: cubic-bezier(.64,.09,.08,1);
+
 
 // Breakpoints
 $tablet: "(min-width: 450px)";
