--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,7 +10,7 @@ layout: compress
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	{% seo %}
-	<meta content="/images/siteicon.png" property="og:image">
+	<meta content="{{ site.baseurl }}/images/siteicon.png" property="og:image">
 
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
